--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,7 @@
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.13.0"
+    "sequelize": "^7.0.0-alpha.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
