--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "express-validator": "^6.14.0",
     "mysql2": "^2.3.3",
     "sequelize": "^7.0.0-alpha.1"
   },
